force-app/main/default/objects/Match__c/fields/HomeTeam__c.field-meta.xml
<CustomField>
    <fullName>HomeTeam__c</fullName>
    <label>Home Team</label>
    <lookupFilter>
        <active>true</active>
        <errorMessage>Value does not exist or does not match filter criteria. Team must have 11 active players</errorMessage>
        <filterItems>
            <field>Team__c.TotalActivePlayers__c</field>
            <operation>equals</operation>
            <value>11</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Team__c</referenceTo>
    <relationshipLabel>Matches</relationshipLabel>
    <relationshipName>Matches</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>