force-app/main/default/objects/Match__c/fields/PreviousMatchBetweenTeamsDatetime__c.field-meta.xml
<CustomField>
    <fullName>PreviousMatchBetweenTeamsDatetime__c</fullName>
    <description>Represents the date and time of the previous match between those teams</description>
    <label>Previous Match Between Teams Datetime</label>
    <type>DateTime</type>
</CustomField>