force-app/main/default/objects/Match__c/fields/StartDateTime__c.field-meta.xml
<CustomField>
    <fullName>StartDateTime__c</fullName>
    <defaultValue>DateTimeValue(now())</defaultValue>
    <label>Start DateTime</label>
    <type>DateTime</type>
</CustomField>