force-app/main/default/objects/Match__c/fields/Winner__c.field-meta.xml
<CustomField>
    <fullName>Winner__c</fullName>
    <description>Represents Name of winner team or &apos;Draw&apos; if score is equal</description>
    <formula>IF (
				(VALUE( LEFT( Score__c ,  1  )))  = (VALUE( RIGHT( Score__c ,  1 ))),
				&quot;Draw&quot;,
				IF (
								(VALUE( LEFT( Score__c ,  1 )))  &gt; (VALUE( RIGHT( Score__c ,  1 ))),
								&quot;Home team&quot;,
								&quot;Visitors&quot; )
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Winner</label>
    <type>Text</type>
</CustomField>