force-app/main/default/objects/Match__c/validationRules/ScoreCannotBeNegativeNumbers.validationRule-meta.xml
<ValidationRule>
    <fullName>ScoreCannotBeNegativeNumbers</fullName>
    <active>true</active>
    <description>Validate scores in Score__c cannot be negative numbers (even though represented as a string)</description>
    <errorConditionFormula>AND (
				VALUE( RIGHT( Score__c , 1 )) &lt;= 0,
				VALUE( LEFT( Score__c , 1 )) &lt;= 0
)</errorConditionFormula>
    <errorDisplayField>Score__c</errorDisplayField>
    <errorMessage>Score__c cannot be negative numbers.</errorMessage>
</ValidationRule>