force-app/main/default/objects/Match__c/validationRules/StartDateTimeCannotBeInPastForNewMatches.validationRule-meta.xml
<ValidationRule>
    <fullName>StartDateTimeCannotBeInPastForNewMatches</fullName>
    <active>true</active>
    <description>StartDateTime__c cannot be in past for new Matches</description>
    <errorConditionFormula>AND (
				ISNEW() ,
				StartDateTime__c  &lt;=  NOW()

)</errorConditionFormula>
    <errorDisplayField>StartDateTime__c</errorDisplayField>
    <errorMessage>You can&apos;t enter the StartDateTime__c in past for new Matches</errorMessage>
</ValidationRule>